2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39691 Buffer overrun when reading EEPROM byte with JTAGICE3
	* jtag3.c (jtag3_initialize): initialize the eeprom_pagesize
	private attribute so the page cache will actually be usable

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #38580 Current svn head, xmega and fuses, all fuses tied to fuse0
	* jtag3.c (jtag3_read_byte, jtag3_write_byte): Correctly apply the
	relevant part of mem->offset as the address to operate on.

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c: Fix "unused variable" warnings.
	* avr.c: (Dito.)
	* stk500v2.c: (Dito.)
	* stk500.c: (Dito.)
	* jtagmkII.c: (Dito.)
	* term.c: (Dito.)
	* ser_posix.c: (Dito.)

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Travis Griggs:
	bug #38307: Can't write usersig of an xmega256a3
	* stk500v2.c (stk600_xprog_page_erase): allow erasing the usersig space.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Robert Niemi:
	bug #35800: Compilation error on certain systems if parport is disabled
	* linux_ppdev.h: Conditionalize inclusion of <linux/parport.h> and
	<linux/ppdev.h> on HAVE_PARPORT

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39794: warnings when building avrdude 6.0rc1 under CentOS 6.4
	* pickit.c (usb_open_device): Use %p rather than %X to print "handle"
	which is a pointer
	* jtag3.c (jtag3_initialize): Initialize "flashsize" to be sure it
	proceeds with a valid value.

2013-09-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #39794: warnings when building avrdude 6.0rc1 under CentOS 6.4
	* buspirate.c: Turn the "cmd" argument of the various methods into
	a "const unsigned char *"; while doing this, declare all arrays being
	passed as arguments to be pointers rather than arrays, as the latter
	obfuscates the way arrays are being passed to a callee in C.
	* avrftdi.c: (Dito.)
	* pickit2.c: (Dito.)
	* ft245r.c: (Dito.)
	* avr910.c: (Dito.)
	* stk500.c: (Dito.)